# is_schedule

./: .env.example  .flake8  .gitignore  README.md  backend-entrypoint.sh  backend.Dockerfile  docker-compose.yml  dynamic.yml  dynamic_conf.yaml  main.c  pyproject.toml  requirements.txt  stack.yml  surnames.csv
.github/workflows/: deploy.yml  docker-image.yml
backend/: dev.sqlite3  manage.py
backend/accounts/: apps.py
backend/accounts/api/: exception_handlers.py  router.py  router_auth.py  router_headless.py  router_oauth.py
backend/accounts/services/: auth.py  emailing.py  headless.py  oauth.py  profile.py  sessions.py
backend/accounts/transport/: schemas.py
backend/brigade_assignment/: apps.py  models.py  services.py
backend/brigade_assignment/api/: router.py
backend/brigade_assignment/transport/: schemas.py
backend/core/: auth.py  exceptions.py  models.py
backend/educational_plan/: apps.py  models.py
backend/group_educational_plan/: apps.py  models.py
backend/groups/api/: router.py
backend/subject/: apps.py
backend/teacher/: apps.py  models.py
backend/teacher_profile/: apps.py  models.py
backend/timetable/: api.py  asgi.py  settings.py  urls.py  views.py
examples/: TeachersContributors.xlsx
first_ver/: temp.py
frontend/: .eslintrc.json  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/public/: styles.css
frontend/src/: App.jsx  index.css  index.jsx  reportWebVitals.ts
requirements/: prod.txt
src/: .env.example  Dockerfile  __init__.py  docker-entrypoint.sh  requirements.txt  testng.txt
src/logic/: cource.py
src/requirements/: prod.txt  testng.txt
src/timetable/: manage.py  temp.sqlite3
(+158 files in other folders)
